--- a/Electric_Meter/AppSetting.json
+++ b/Electric_Meter/AppSetting.json
@@ -1,7 +1,8 @@
 {
     "AppSettings": {
         //"ConnectString": "Server=FLP-YTJ-07;Database=PowerTempWatch;TrustServerCertificate=True;MultipleActiveResultSets=True;",
-        "ConnectString": "Data Source=FLP-YTJ-07;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;",
+        //"ConnectString": "Data Source=FLP-YTJ-07;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;",
+        "ConnectString": "Server=10.30.201.201;Database=PowerTempWatch;User ID=sa;Password=greenland@VN;TrustServerCertificate=True;MultipleActiveResultSets=True;",
         "TimeReloadData": 10, //second
         "TimeSaveToDataBase": 300, //second
         "TimeSendRequest": 5,
@@ -21,8 +22,8 @@
 
         },
         "CurrentArea": "VB2",
-        "Port": "COM3",
-        "Baudrate": 1200,
+        "Port": "COM4",
+        "Baudrate": 2400,
         "TotalMachine": 25,
         "AutoActions": [
             "Connect",
