--- a/Electric_Meter/Electric_Meter.csproj
+++ b/Electric_Meter/Electric_Meter.csproj
@@ -13,10 +13,14 @@
     <None Remove="appsetting.json" />
     <None Remove="Assets\pause.png" />
     <None Remove="Assets\play.png" />
+    <None Remove="Languages\en.json" />
+    <None Remove="Languages\km.json" />
+    <None Remove="Languages\vi.json" />
+    <None Remove="Languages\zh.json" />
     <None Remove="SeedData\activeType.json" />
     <None Remove="SeedData\controlCode.json" />
     <None Remove="SeedData\devices.json" />
-    <None Remove="SeedData\dv_Machine.json" />
+    <None Remove="SeedData\dv_Device.json" />
     <None Remove="SeedData\sensorType.json" />
   </ItemGroup>
 
@@ -27,6 +31,18 @@
     <Content Include="Assets\electric.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Languages\en.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Languages\km.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Languages\vi.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Languages\zh.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="SeedData\activeType.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -34,9 +50,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="SeedData\devices.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SeedData\dv_Machine.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="SeedData\sensorType.json">
@@ -78,21 +91,6 @@
     <Resource Include="Assets\play.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Languages\cn.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Languages\en.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Languages\km.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Languages\vi.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
