Refactor app architecture and improve UI/serial handling
Simplified the application by removing unused classes, properties,
and methods. Introduced `ResistanceCoefficient` for dynamic
calculations and added `DataUpdated` event for real-time UI updates.
Refactored `ToolViewModel` to use `ObservableCollection` and
`[ObservableProperty]` for better data binding. Redesigned UI
layouts for `ToolView` and `SettingView` to improve readability
and consistency.

Removed legacy database interactions and redundant SQL scripts.
Updated project paths and configurations to reflect new directory
structure and user environment. Added `ElectricDataDisplay` class
to support dynamic data updates. Targeted .NET 8.0 and improved
serial port communication logic.

--- a/Electric_Meter/AppSetting.json
+++ b/Electric_Meter/AppSetting.json
@@ -22,39 +22,10 @@
 
         },
         "CurrentArea": "VB2",
-        "Port": "COM4",
-        "Baudrate": 2400,
-        "TotalMachine": 25,
-        "AutoActions": [
-            "Connect",
-            "ClickBtn"
-        ],
-        "devices": [
-            {
-                "address": "1",
-                "devid": "5"
-            },
-            {
-                "address": "2",
-                "devid": "6"
-            },
-            {
-                "address": "3",
-                "devid": "7"
-            },
-            {
-                "address": "9",
-                "devid": "13"
-            },
-            {
-                "address": "10",
-                "devid": "14"
-            },
-            {
-                "address": "11",
-                "devid": "15"
-            }
-        ]
+        "ResistanceCoefficient": 20.0,
+        "Port": "COM3",
+        "Baudrate": 1200
+        
 
     }
 }
