--- a/Electric_Meter/AppSetting.json
+++ b/Electric_Meter/AppSetting.json
@@ -2,10 +2,11 @@
     "AppSettings": {
         //"ConnectString": "Server=FLP-YTJ-07;Database=PowerTempWatch;TrustServerCertificate=True;MultipleActiveResultSets=True;",
         //"ConnectString": "Data Source=ADMIN-PC\\ANTHONYNGUYEN;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;",
-        "ConnectString": "Server=10.30.80.2;Database=PowerTempWatch_test;User ID=sa;Password=greenland@VN;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+        "ConnectString": "Server=10.30.201.201;Database=PowerTempWatch_test;User ID=sa;Password=greenland@VN;TrustServerCertificate=True;MultipleActiveResultSets=True;",
         "TimeReloadData": 10, //second
         "TimeSaveToDataBase": 300, //second
         "TimeSendRequest": 5,
+        "TimeOutReceive": 5,
         "Requests": {
             "Ua": "03 20 06 00 02",
             "Ub": "03 20 08 00 02",
