--- a/Electric_Meter/AppSetting.json
+++ b/Electric_Meter/AppSetting.json
@@ -1,8 +1,8 @@
 {
     "AppSettings": {
         //"ConnectString": "Server=FLP-YTJ-07;Database=PowerTempWatch;TrustServerCertificate=True;MultipleActiveResultSets=True;",
-        //"ConnectString": "Data Source=ADMIN-PC\\ANTHONYNGUYEN;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;",
-        "ConnectString": "Server=10.30.80.1;Database=PowerTempWatch_test;User ID=sa;Password=greenland@VN;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+        "ConnectString": "Data Source=ADMIN-PC\\ANTHONYNGUYEN;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;",
+        //"ConnectString": "Server=ADMIN-PC\\ANTHONYNGUYEN;Database=PowerTempWatch_test;User ID=sa;Password=greenland@VN;TrustServerCertificate=True;MultipleActiveResultSets=True;",
         "TimeReloadData": 10, //second
         "TimeSaveToDataBase": 300, //second
         "TimeSendRequest": 5,
@@ -24,7 +24,7 @@
         },
         "CurrentArea": "VB2",
         "FactorImp": 10.0,
-        "FactorU":0.1,
+        "FactorU": 0.1,
         "FactorI": 10.0,
         "FactorP": 1.0,
         "Port": "COM7",
