--- a/Electric_Meter_WebAPI/Electric_Meter_WebAPI.csproj
+++ b/Electric_Meter_WebAPI/Electric_Meter_WebAPI.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dto\DeviceDto\" />
+    <Folder Include="Dto\ControlcodeDto\" />
+  </ItemGroup>
+
 </Project>
