--- a/Electric_Meter/AppSetting.json
+++ b/Electric_Meter/AppSetting.json
@@ -1,9 +1,9 @@
 {
     "AppSettings": {
         //"ConnectString": "Server=FLP-YTJ-07;Database=PowerTempWatch;TrustServerCertificate=True;MultipleActiveResultSets=True;",
-        "ConnectString": "Data Source=ADMIN-PC\\ANTHONYNGUYEN;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;MultipleActiveResultSets=True;",
+        //"ConnectString": "Data Source=ADMIN-PC\\ANTHONYNGUYEN;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True;MultipleActiveResultSets=True;",
         //"ConnectString": "Server=10.30.80.1;Database=PowerTempWatch_test;User ID=sa;Password=greenland@VN;TrustServerCertificate=True;MultipleActiveResultSets=True;",
-        //"ConnectString": "Data Source=FLP-YTJ-07;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True",
+        "ConnectString": "Data Source=FLP-YTJ-07;Initial Catalog=PowerTempWatch;Integrated Security=True;Trust Server Certificate=True",
         "TimeReloadData": 10, //second
         "TimeSaveToDataBase": 300, //second
         //"TimeSendRequest": 5,
